tests/ui/woops.stderr
error: `#[rustc_as_ptr]` is not valid at that position. It is only allowed in ["function", "method"]
  --> $DIR/woops.rs:4:1
   |
LL | #[rustc_as_ptr]
   | ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

